--- a/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
+++ b/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FNp-S1-Dae">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="FNp-S1-Dae">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -2288,33 +2288,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cvJ-ta-eg8" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="433"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RZa-pe-QxZ">
+                                        <rect key="frame" x="19" y="90" width="97" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="97" id="NCD-bE-5W0"/>
+                                            <constraint firstAttribute="height" constant="30" id="vQB-50-s7j"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DmP-rR-aVM">
-                                <rect key="frame" x="20" y="453" width="335" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="VMt-AK-xt8"/>
+                                    <constraint firstItem="RZa-pe-QxZ" firstAttribute="top" secondItem="cvJ-ta-eg8" secondAttribute="top" constant="90" id="KAx-P4-Wr0"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Uj-h7Z">
+                                <rect key="frame" x="20" y="503" width="335" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="335" id="DCm-EC-jDB"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPv-Uf-vYh">
-                                <rect key="frame" x="20" y="453" width="335" height="35"/>
-                                <connections>
-                                    <action selector="openStartLocation:" destination="FZA-fj-pwb" eventType="touchUpInside" id="jOQ-f3-wyT"/>
-                                    <action selector="showDirection:" destination="FZA-fj-pwb" eventType="touchUpInside" id="nWX-zT-GJK"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Uj-h7Z">
-                                <rect key="frame" x="20" y="498" width="335" height="35"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqn-Ez-qJ2">
-                                <rect key="frame" x="20" y="498" width="244" height="35"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqn-Ez-qJ2">
+                                <rect key="frame" x="20" y="503" width="244" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5Pf-Ig-kr2"/>
+                                    <constraint firstAttribute="width" constant="340" id="qAP-TM-Jt7"/>
+                                </constraints>
                                 <connections>
                                     <action selector="openDestinationLocation:" destination="FZA-fj-pwb" eventType="touchUpInside" id="Vl2-uk-lSb"/>
                                 </connections>
@@ -2345,31 +2351,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="KPv-Uf-vYh" firstAttribute="centerY" secondItem="DmP-rR-aVM" secondAttribute="centerY" id="3ku-N1-9yP"/>
-                            <constraint firstItem="DmP-rR-aVM" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" constant="20" id="3tV-sp-b0g"/>
-                            <constraint firstAttribute="trailing" secondItem="DmP-rR-aVM" secondAttribute="trailing" constant="20" id="5ix-gD-q7x"/>
+                            <constraint firstItem="iy9-eQ-eCw" firstAttribute="top" secondItem="cvJ-ta-eg8" secondAttribute="bottom" id="4gZ-42-uLv"/>
                             <constraint firstItem="1oY-do-gYf" firstAttribute="top" secondItem="o4D-Uj-h7Z" secondAttribute="bottom" constant="50" id="6J7-Z1-fN0"/>
                             <constraint firstItem="iy9-eQ-eCw" firstAttribute="top" secondItem="1oY-do-gYf" secondAttribute="bottom" constant="10" id="6O7-nJ-neA"/>
                             <constraint firstItem="iy9-eQ-eCw" firstAttribute="top" secondItem="FVQ-yE-zd1" secondAttribute="bottom" constant="48" id="8KR-K6-m5B"/>
-                            <constraint firstItem="o4D-Uj-h7Z" firstAttribute="leading" secondItem="DmP-rR-aVM" secondAttribute="leading" id="9vZ-xZ-ICZ"/>
-                            <constraint firstItem="KPv-Uf-vYh" firstAttribute="height" secondItem="DmP-rR-aVM" secondAttribute="height" id="CG2-dw-eLM"/>
-                            <constraint firstItem="KPv-Uf-vYh" firstAttribute="centerX" secondItem="DmP-rR-aVM" secondAttribute="centerX" id="CqQ-FF-No0"/>
                             <constraint firstItem="1oY-do-gYf" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" constant="50" id="FUt-RV-0RC"/>
-                            <constraint firstItem="sqn-Ez-qJ2" firstAttribute="height" secondItem="o4D-Uj-h7Z" secondAttribute="height" id="Ga4-Zr-kuz"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="width" secondItem="1oY-do-gYf" secondAttribute="width" id="L1g-2o-dvY"/>
-                            <constraint firstItem="KPv-Uf-vYh" firstAttribute="width" secondItem="DmP-rR-aVM" secondAttribute="width" id="LyJ-cn-f2C"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="height" secondItem="1oY-do-gYf" secondAttribute="height" id="MoF-Js-O0q"/>
                             <constraint firstItem="sqn-Ez-qJ2" firstAttribute="centerX" secondItem="o4D-Uj-h7Z" secondAttribute="centerX" id="OSq-sm-4tq"/>
                             <constraint firstItem="sqn-Ez-qJ2" firstAttribute="centerY" secondItem="o4D-Uj-h7Z" secondAttribute="centerY" id="Ox8-DL-9vB"/>
-                            <constraint firstItem="DmP-rR-aVM" firstAttribute="top" secondItem="cvJ-ta-eg8" secondAttribute="bottom" constant="20" id="TH2-zb-OSF"/>
-                            <constraint firstItem="o4D-Uj-h7Z" firstAttribute="height" secondItem="DmP-rR-aVM" secondAttribute="height" id="Uou-jg-HcN"/>
                             <constraint firstItem="cvJ-ta-eg8" firstAttribute="top" secondItem="OF1-cb-b8c" secondAttribute="top" id="UtR-vS-Uxl"/>
                             <constraint firstAttribute="trailing" secondItem="cvJ-ta-eg8" secondAttribute="trailing" id="V1B-MS-dlH"/>
                             <constraint firstAttribute="trailing" secondItem="1oY-do-gYf" secondAttribute="trailing" constant="50" id="Vm9-G6-TAl"/>
-                            <constraint firstItem="o4D-Uj-h7Z" firstAttribute="trailing" secondItem="DmP-rR-aVM" secondAttribute="trailing" id="Znw-H6-P2p"/>
-                            <constraint firstItem="sqn-Ez-qJ2" firstAttribute="width" secondItem="o4D-Uj-h7Z" secondAttribute="width" id="cdv-d1-mVp"/>
                             <constraint firstItem="FVQ-yE-zd1" firstAttribute="leading" secondItem="cvJ-ta-eg8" secondAttribute="leading" id="dAW-wG-hMG"/>
-                            <constraint firstItem="o4D-Uj-h7Z" firstAttribute="top" secondItem="DmP-rR-aVM" secondAttribute="bottom" constant="10" id="gxy-dY-q9C"/>
                             <constraint firstItem="cvJ-ta-eg8" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" id="kCy-lj-BYw"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="centerY" secondItem="1oY-do-gYf" secondAttribute="centerY" id="ocb-36-2t8"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="centerX" secondItem="1oY-do-gYf" secondAttribute="centerX" id="ur3-gB-F7Z"/>
@@ -2381,7 +2375,7 @@
                         <outlet property="destinationLocation" destination="o4D-Uj-h7Z" id="S28-p3-GCi"/>
                         <outlet property="googleMaps" destination="cvJ-ta-eg8" id="ftG-kU-0ll"/>
                         <outlet property="postButton" destination="FVQ-yE-zd1" id="TxS-UU-Khw"/>
-                        <outlet property="startLocation" destination="DmP-rR-aVM" id="aNJ-XY-DHR"/>
+                        <outlet property="routeDistance" destination="RZa-pe-QxZ" id="fCm-KY-zh1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nnj-zM-Eq9" sceneMemberID="firstResponder"/>
