--- a/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
+++ b/IOS App/Slug Ride 2/Base.lproj/Main.storyboard
@@ -295,27 +295,18 @@
                                     <constraint firstAttribute="height" constant="161" id="daf-63-nTd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="60"/>
-                                <color key="textColor" red="0.93441106799999996" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2mM-TA-W7Z">
-                                <rect key="frame" x="4" y="135" width="367" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PSZ-t5-PCw">
-                                <rect key="frame" x="4" y="184" width="367" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PSZ-t5-PCw">
+                                <rect key="frame" x="4" y="479" width="367" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPc-GZ-FVR">
-                                <rect key="frame" x="21" y="237" width="333" height="40"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="4tB-b4-2TZ"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPc-GZ-FVR">
+                                <rect key="frame" x="21" y="550" width="333" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.47667680870000001" green="0.15539044160000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -323,33 +314,32 @@
                                     <action selector="login_submit:" destination="Vxr-U3-kOh" eventType="touchUpInside" id="IEA-O8-eFp"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hb-CI-KU5">
-                                <rect key="frame" x="50" y="292" width="275" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hb-CI-KU5">
+                                <rect key="frame" x="130" y="303" width="115" height="30"/>
                                 <state key="normal" title="Forgot Password">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="0.47667680870000001" green="0.15539044160000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="4fA-hb-MMI" kind="show" id="qBv-T5-NEe"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2mM-TA-W7Z">
+                                <rect key="frame" x="4" y="412" width="367" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="bPc-GZ-FVR" firstAttribute="top" secondItem="PSZ-t5-PCw" secondAttribute="bottom" constant="23" id="49v-NY-m9f"/>
                             <constraint firstItem="PSZ-t5-PCw" firstAttribute="leading" secondItem="ODc-0E-Epz" secondAttribute="leading" constant="4" id="9Sg-dq-AwQ"/>
-                            <constraint firstAttribute="trailing" secondItem="bPc-GZ-FVR" secondAttribute="trailing" constant="21" id="Ajr-Ti-wB4"/>
                             <constraint firstItem="H6X-HF-ZtC" firstAttribute="centerX" secondItem="ODc-0E-Epz" secondAttribute="centerX" id="KDX-0d-N28"/>
-                            <constraint firstItem="bPc-GZ-FVR" firstAttribute="leading" secondItem="ODc-0E-Epz" secondAttribute="leading" constant="21" id="LBF-5g-miy"/>
                             <constraint firstItem="H6X-HF-ZtC" firstAttribute="top" secondItem="3pw-zn-98K" secondAttribute="bottom" constant="-36" id="Mi3-5O-kWr"/>
-                            <constraint firstItem="9hb-CI-KU5" firstAttribute="top" secondItem="bPc-GZ-FVR" secondAttribute="bottom" constant="15" id="Nmh-Im-eML"/>
-                            <constraint firstAttribute="trailing" secondItem="bPc-GZ-FVR" secondAttribute="trailing" constant="21" id="Yug-59-DoY"/>
                             <constraint firstItem="2mM-TA-W7Z" firstAttribute="leading" secondItem="ODc-0E-Epz" secondAttribute="leading" constant="4" id="dMA-f8-etX"/>
                             <constraint firstItem="9hb-CI-KU5" firstAttribute="leading" secondItem="ODc-0E-Epz" secondAttribute="leadingMargin" constant="34" id="ffV-eA-SfK"/>
                             <constraint firstItem="2mM-TA-W7Z" firstAttribute="top" secondItem="3pw-zn-98K" secondAttribute="bottom" constant="115" id="ipX-td-AFI"/>
                             <constraint firstItem="PSZ-t5-PCw" firstAttribute="top" secondItem="2mM-TA-W7Z" secondAttribute="bottom" constant="19" id="n8n-pw-nPI"/>
                             <constraint firstAttribute="trailing" secondItem="PSZ-t5-PCw" secondAttribute="trailing" constant="4" id="qXP-4p-9HV"/>
                             <constraint firstAttribute="trailing" secondItem="2mM-TA-W7Z" secondAttribute="trailing" constant="4" id="rn2-Dv-bHr"/>
-                            <constraint firstItem="9hb-CI-KU5" firstAttribute="centerX" secondItem="bPc-GZ-FVR" secondAttribute="centerX" id="zhj-Nq-jXN"/>
                         </constraints>
                     </view>
                     <connections>
@@ -410,7 +400,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Rider" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6d-3k-d1e">
                                 <rect key="frame" x="100" y="90" width="175" height="69"/>
                                 <fontDescription key="fontDescription" name="Georgia-BoldItalic" family="Georgia" pointSize="60"/>
-                                <color key="textColor" white="0.85483099490000003" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.47667680870000001" green="0.15539044160000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -2289,22 +2279,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cvJ-ta-eg8" customClass="GMSMapView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RZa-pe-QxZ">
-                                        <rect key="frame" x="19" y="90" width="97" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="97" id="NCD-bE-5W0"/>
-                                            <constraint firstAttribute="height" constant="30" id="vQB-50-s7j"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="RZa-pe-QxZ" firstAttribute="top" secondItem="cvJ-ta-eg8" secondAttribute="top" constant="90" id="KAx-P4-Wr0"/>
-                                </constraints>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Uj-h7Z">
                                 <rect key="frame" x="20" y="503" width="335" height="30"/>
@@ -2326,24 +2301,30 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3CG-l8-xUn">
-                                <rect key="frame" x="50" y="583" width="275" height="30"/>
+                                <rect key="frame" x="77" y="583" width="222" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1oY-do-gYf">
-                                <rect key="frame" x="50" y="583" width="275" height="30"/>
-                                <state key="normal" title="SHOW DIRECTION"/>
+                                <rect key="frame" x="77" y="583" width="222" height="30"/>
+                                <state key="normal" title="SHOW DIRECTION">
+                                    <color key="titleColor" red="0.47667680870000001" green="0.15539044160000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="showDirection:" destination="FZA-fj-pwb" eventType="touchUpInside" id="OTn-H3-9uG"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVQ-yE-zd1">
                                 <rect key="frame" x="0.0" y="545" width="120" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="A1K-RW-Aa4"/>
                                 </constraints>
-                                <state key="normal" title="Post Ride"/>
+                                <state key="normal" title="Post Ride">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.85483099490000003" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="riderPostRide:" destination="FZA-fj-pwb" eventType="touchUpInside" id="EaR-Wd-On9"/>
                                 </connections>
@@ -2355,14 +2336,14 @@
                             <constraint firstItem="1oY-do-gYf" firstAttribute="top" secondItem="o4D-Uj-h7Z" secondAttribute="bottom" constant="50" id="6J7-Z1-fN0"/>
                             <constraint firstItem="iy9-eQ-eCw" firstAttribute="top" secondItem="1oY-do-gYf" secondAttribute="bottom" constant="10" id="6O7-nJ-neA"/>
                             <constraint firstItem="iy9-eQ-eCw" firstAttribute="top" secondItem="FVQ-yE-zd1" secondAttribute="bottom" constant="48" id="8KR-K6-m5B"/>
-                            <constraint firstItem="1oY-do-gYf" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" constant="50" id="FUt-RV-0RC"/>
+                            <constraint firstItem="1oY-do-gYf" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" constant="77" id="FUt-RV-0RC"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="width" secondItem="1oY-do-gYf" secondAttribute="width" id="L1g-2o-dvY"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="height" secondItem="1oY-do-gYf" secondAttribute="height" id="MoF-Js-O0q"/>
                             <constraint firstItem="sqn-Ez-qJ2" firstAttribute="centerX" secondItem="o4D-Uj-h7Z" secondAttribute="centerX" id="OSq-sm-4tq"/>
                             <constraint firstItem="sqn-Ez-qJ2" firstAttribute="centerY" secondItem="o4D-Uj-h7Z" secondAttribute="centerY" id="Ox8-DL-9vB"/>
                             <constraint firstItem="cvJ-ta-eg8" firstAttribute="top" secondItem="OF1-cb-b8c" secondAttribute="top" id="UtR-vS-Uxl"/>
                             <constraint firstAttribute="trailing" secondItem="cvJ-ta-eg8" secondAttribute="trailing" id="V1B-MS-dlH"/>
-                            <constraint firstAttribute="trailing" secondItem="1oY-do-gYf" secondAttribute="trailing" constant="50" id="Vm9-G6-TAl"/>
+                            <constraint firstAttribute="trailing" secondItem="1oY-do-gYf" secondAttribute="trailing" constant="76" id="Vm9-G6-TAl"/>
                             <constraint firstItem="FVQ-yE-zd1" firstAttribute="leading" secondItem="cvJ-ta-eg8" secondAttribute="leading" id="dAW-wG-hMG"/>
                             <constraint firstItem="cvJ-ta-eg8" firstAttribute="leading" secondItem="OF1-cb-b8c" secondAttribute="leading" id="kCy-lj-BYw"/>
                             <constraint firstItem="3CG-l8-xUn" firstAttribute="centerY" secondItem="1oY-do-gYf" secondAttribute="centerY" id="ocb-36-2t8"/>
@@ -2375,7 +2356,6 @@
                         <outlet property="destinationLocation" destination="o4D-Uj-h7Z" id="S28-p3-GCi"/>
                         <outlet property="googleMaps" destination="cvJ-ta-eg8" id="ftG-kU-0ll"/>
                         <outlet property="postButton" destination="FVQ-yE-zd1" id="TxS-UU-Khw"/>
-                        <outlet property="routeDistance" destination="RZa-pe-QxZ" id="fCm-KY-zh1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nnj-zM-Eq9" sceneMemberID="firstResponder"/>
